Fixed issue with wordbreak on Chrome

--- a/Template/darkerfx_custom/styles/custom.css
+++ b/Template/darkerfx_custom/styles/custom.css
@@ -179,6 +179,10 @@ div.sideaffix {
     text-overflow: ellipsis;
 }
 
+.sidetoc .nav.level2 li a wbr {
+    display: none;
+}
+
 .sidetoc.shiftup {
     bottom: 61px;
 }
